# ConceptualMonads

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Monad.h  MonadTest.cpp  OptionalM.h  StateM.h  VectorM.h  build.sh
Test/: OptionalTest.cpp  VectorTest.cpp
